// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`allows to make CSS global: allows to make CSS global - CSS 1`] = `
".page {
    padding: 20px;
}

._global_title {
    color: green;
}
"
`;

exports[`allows to make CSS global: allows to make CSS global - JSON 1`] = `
Object {
  "title": "_global_title",
}
`;

exports[`composes rules: composes rules - CSS 1`] = `
"._composes_a_another-mixin {
    display: -webkit-flex;
    display: -moz-box;
    display: flex;
    height: 100px;
    width: 200px;
}._composes_a_hello {
    foo: bar;
}._composes_mixins_title {
    color: black;
    font-size: 40px;
}._composes_mixins_title:hover {
    color: red;
}._composes_mixins_figure {
    text-align: center
}._composes_mixins_title:focus, ._composes_mixins_figure:focus {
    outline: none;
    border: 1px solid red;
}

.page {
    padding: 20px;
}

._composes_title {
    color: green;
}

._composes_article {
    font-size: 16px;
}

._composes_figure {
    display: -webkit-flex;
    display: -moz-box;
    display: flex;
}
"
`;

exports[`composes rules: composes rules - JSON 1`] = `
Object {
  "article": "_composes_article",
  "figure": "_composes_figure _composes_mixins_figure _composes_a_another-mixin",
  "title": "_composes_title _composes_mixins_title",
}
`;

exports[`exposes export tokens for other plugins: exposes export tokens for other plugins 1`] = `
Array [
  Object {
    "exportTokens": Object {
      "article": "_values_article",
      "colors": "\\"./values.colors.css\\"",
      "primary": "green",
      "secondary": "blue",
      "title": "_values_title",
    },
    "plugin": "postcss-modules",
    "type": "export",
  },
]
`;

exports[`generates scoped name with interpolated string: generates scoped name with interpolated string - CSS 1`] = `
".interpolated__title___mAhtv {
    color: green;
}

.interpolated__article___MQq7x {
    color: black;
}
"
`;

exports[`generates scoped name with interpolated string: generates scoped name with interpolated string - JSON 1`] = `
Object {
  "article": "interpolated__article___MQq7x",
  "title": "interpolated__title___mAhtv",
}
`;

exports[`only calls plugins once when it allows to make CSS global: plugins once - allows to make CSS global - CSS 1`] = `
"/* validator-2-start (global.css) */

/* validator-1-start (global.css) */

.page {
    padding: 20px;
}

._global_title {
    color: green;
}

/* validator-1-end (global.css) */

/* validator-2-end (global.css) */
"
`;

exports[`only calls plugins once when it composes rules: plugins once - composes rules - CSS 1`] = `
"/* validator-1-start (composes.a.css) */._composes_a_another-mixin {
    display: -webkit-flex;
    display: -moz-box;
    display: flex;
    height: 100px;
    width: 200px;
}._composes_a_hello {
    foo: bar;
}/* validator-1-end (composes.a.css) *//* validator-1-start (composes.mixins.css) */._composes_mixins_title {
    color: black;
    font-size: 40px;
}._composes_mixins_title:hover {
    color: red;
}._composes_mixins_figure {
    text-align: center
}._composes_mixins_title:focus, ._composes_mixins_figure:focus {
    outline: none;
    border: 1px solid red;
}/* validator-1-end (composes.mixins.css) */

/* validator-2-start (composes.css) */

/* validator-1-start (composes.css) */

.page {
    padding: 20px;
}

._composes_title {
    color: green;
}

._composes_article {
    font-size: 16px;
}

._composes_figure {
    display: -webkit-flex;
    display: -moz-box;
    display: flex;
}

/* validator-1-end (composes.css) */

/* validator-2-end (composes.css) */
"
`;

exports[`only calls plugins once when it generates scoped name with interpolated string: plugins once - generates scoped name with interpolated string - CSS 1`] = `
"/* validator-2-start (interpolated.css) */

/* validator-1-start (interpolated.css) */

.interpolated__title___mAhtv {
    color: green;
}

.interpolated__article___MQq7x {
    color: black;
}

/* validator-1-end (interpolated.css) */

/* validator-2-end (interpolated.css) */
"
`;

exports[`only calls plugins once when it preserves comments: plugins once - preserves comments - CSS 1`] = `
"/* validator-2-start (comments.css) */
/* validator-1-start (comments.css) */
/**
 * This is a doc comment...
 */
p {
  /* ...and a line comment */
  padding: 0;
}
/* validator-1-end (comments.css) */
/* validator-2-end (comments.css) */
"
`;

exports[`only calls plugins once when it processes classes: plugins once - processes classes - CSS 1`] = `
"/* validator-2-start (classes.css) */

/* validator-1-start (classes.css) */

.page {
    padding: 20px;
}

._classes_title {
    color: green;
}

._classes_article {
    color: black;
}

/* validator-1-end (classes.css) */

/* validator-2-end (classes.css) */
"
`;

exports[`only calls plugins once when it processes values: plugins once - processes values - CSS 1`] = `
"/* validator-1-start (values.colors.css) *//* validator-1-end (values.colors.css) */
/* validator-2-start (values.css) */
/* validator-1-start (values.css) */

._values_title {
    color: green;
}

._values_article {
    color: blue;
}

/* validator-1-end (values.css) */

/* validator-2-end (values.css) */
"
`;

exports[`only calls plugins once when it saves origin plugins: plugins once - saves origin plugins - CSS 1`] = `
"/* validator-2-start (plugins.css) *//* validator-1-start (plugins.css) */
._plugins_title {
    display: -webkit-flex;
    display: -moz-box;
    display: flex;
    color: green;
}/* validator-1-end (plugins.css) *//* validator-2-end (plugins.css) */
"
`;

exports[`preserves comments: preserves comments - CSS 1`] = `
"/**
 * This is a doc comment...
 */
p {
  /* ...and a line comment */
  padding: 0;
}
"
`;

exports[`preserves comments: preserves comments - JSON 1`] = `Object {}`;

exports[`processes classes: processes classes - CSS 1`] = `
".page {
    padding: 20px;
}

._classes_title {
    color: green;
}

._classes_article {
    color: black;
}
"
`;

exports[`processes classes: processes classes - JSON 1`] = `
Object {
  "article": "_classes_article",
  "title": "_classes_title",
}
`;

exports[`processes globalModulePaths option: processes globalModulePaths option 1`] = `
".page {
    padding: 20px;
}

._globalModulePaths_title {
    color: green;
}
"
`;

exports[`processes hashPrefix option: processes hashPrefix option 1`] = `".uG5tz {}"`;

exports[`processes resolve option: processes resolve option 1`] = `
"._composes_a_another-mixin {
    display: flex;
    height: 100px;
    width: 200px;
}._composes_a_hello {
    foo: bar;
}

._compose_resolve_figure {
    display: flex;
}

._compose_resolve_figure-single-quote {
    display: block;
}
"
`;

exports[`processes values: processes values - CSS 1`] = `
"

._values_title {
    color: green;
}

._values_article {
    color: blue;
}
"
`;

exports[`processes values: processes values - JSON 1`] = `
Object {
  "article": "_values_article",
  "colors": "\\"./values.colors.css\\"",
  "primary": "green",
  "secondary": "blue",
  "title": "_values_title",
}
`;

exports[`saves origin plugins: saves origin plugins - CSS 1`] = `
"._plugins_title {
    display: -webkit-flex;
    display: -moz-box;
    display: flex;
    color: green;
}
"
`;

exports[`saves origin plugins: saves origin plugins - JSON 1`] = `
Object {
  "title": "_plugins_title",
}
`;
